EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==09/02/2012==
Akkadius: First set of efforts to clean up Windows compiling. See:
	http://www.eqemulator.org/forums/showthread.php?p=212217#post212217
	- Cleaned up x64 compiles, x86 compiles coming right up
	- Removed pragma comments and forced them to be used under 'Additional Dependencies' (Windows)
Akkadius: Fixed-up Release & Debug 32-bit compiles
Akkadius: Uploading includes and libraries for both x64 and x86 so that VS2010 can automatically reference those libraries and requires no configuration
Akkadius: All project types have had includes and libraries linked to the appropriate machine type
Akkadius: Most project types have been set to /MP (Multiprocessor compile) and Warning Level 1 to filter most of the garbage
Akkadius: Got the rest of the VS2010 compiles working on a fresh SVN:
		Debug x64|x64 = Debug x64|x64
		Debug|Win32 = Debug|Win32
		Debug|x64 = Debug|x64
		DebugBots x64|x64 = DebugBots x64|x64
		DebugBots|Win32 = DebugBots|Win32
		Release x64|x64 = Release x64|x64
		Release|Win32 = Release|Win32
		ReleaseBots x64|x64 = ReleaseBots x64|x64
		ReleaseBots|Win32 = ReleaseBots|Win32
		ReleaseBots|x64 = ReleaseBots|x64

==09/02/2012==
cavedude: (image) Added Classic Multiquest support.
cavedude: Added quest::clearhandin and #clearquestitems so that multiquest can co-exist with out current system without issues.

REQUIRED plugin: utils/defaults/plugins/check_handin.pl (Or use PEQ quests repo)

==08/27/2012==
Akkadius: (Uleat) Temporary dupe fix until we can iron this out the way it should be (Not use signed ints in the blob). This should trap a majority of it to client saves.
Akkadius: Account shared platinum field type change (signed to unsigned) to no longer allow negative values...

REQUIRED SQL: utils/sql/svn/2195_required_sharedplatupdates.sql

==08/17/2012==
Kayen: Taunt skill updated to work consistent with live.